--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^6.1.3
   dio: ^3.0.10
-
-
+  flutter_local_notifications: ^3.0.1+6
+  intl: ^0.16.1
+  shared_preferences: ^0.5.12+4
 
 
 
