--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_qiblah: ^1.0.3+2
   geolocator: ^6.1.14
   flutter_svg: ^0.19.2+1
+  animated_splash_screen: ^1.0.1+2
+  lottie: ^0.7.0+1
 
 
 
