--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+      sdk: flutter
+  intl: ^0.17.0 # Add this line
   flutter_bloc: ^6.1.3
   dio: ^3.0.10
   flutter_local_notifications: ^3.0.1+6
-  intl: ^0.16.1
   shared_preferences: ^0.5.12+4
   flutter_qiblah: ^1.0.3+2
   geolocator: ^6.1.14
@@ -61,6 +63,7 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true # Add this line
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
