--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_svg: ^0.19.2+1
   animated_splash_screen: ^1.0.1+2
   lottie: ^0.7.0+1
+  carousel_slider: ^3.0.0
+  smooth_page_indicator: ^0.2.3
 
 
 
